--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
